--- a/public/css/app.css
+++ b/public/css/app.css
@@ -652,6 +652,9 @@ select {
 .z-50 {
   z-index: 50;
 }
+.m-4 {
+  margin: 1rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -689,6 +692,15 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.mr-3 {
+  margin-right: 0.75rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -697,9 +709,6 @@ select {
 }
 .mt-6 {
   margin-top: 1.5rem;
-}
-.mt-5 {
-  margin-top: 1.25rem;
 }
 .-mr-2 {
   margin-right: -0.5rem;
@@ -737,6 +746,9 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-48 {
+  height: 12rem;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -748,6 +760,11 @@ select {
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.min-h-fit {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 .w-5 {
   width: 1.25rem;
