--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12941,6 +12941,7 @@ label {
 .form-group .form-control {
 	width: 100%;
 	border: 0;
+	background-color:#f1f2f7;
 	box-shadow: none;
 	border-bottom: 1px solid #9e9e9e;
 	-webkit-border-radius: 0;
