--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11386,22 +11386,46 @@ table .checkbox [type="checkbox"] + label {
 	border: 2px solid #888;
 	background-color: #888
 }
+ .radio-holder {
+	 display: flex;
+	 gap: 5px;
+ }
 
-[type="radio"]:not(:checked) + label {
-	padding-right: 26px;
-	height: 25px;
-	line-height: 25px;
-	font-size: 13px;
-	font-weight: normal
+input[type="radio"] {
+	display: none;
+	width: auto;
+	padding: 0;
+	margin: 0;
 }
 
-[type="radio"]:checked + label {
-	padding-right: 26px;
-	height: 25px;
-	line-height: 25px;
-	font-size: 13px;
-	font-weight: normal
+.radio-label {
+	padding: 10px;
+	border: 2px solid #bbb;
+	border-radius: 10px;
+	transition: 0.3s ease;
+	cursor: pointer;
+	margin-top: 5px;
 }
+.radio-label:hover {
+	color: #b76e79;
+	border-color: #b76e79;
+}
+
+/*[type="radio"]:not(:checked) + label {*/
+/*	padding-right: 26px;*/
+/*	height: 25px;*/
+/*	line-height: 25px;*/
+/*	font-size: 13px;*/
+/*	font-weight: normal*/
+/*}*/
+
+/*[type="radio"]:checked + label {*/
+/*	padding-right: 26px;*/
+/*	height: 25px;*/
+/*	line-height: 25px;*/
+/*	font-size: 13px;*/
+/*	font-weight: normal*/
+/*}*/
 
 [type="radio"] + label {
 	vertical-align: middle
